input değerlerin if sorguları yazıldı

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                 <div class="form-1">
                     <div class="form-1-text">
                         <p>Email Adress</p>
-                        <h5>This field is required</h5>
+                        <h5 class="epostaError">This field is required</h5>
                     </div>
                     <input type="text" id="input-eposta" class="input-eposta" placeholder="e.g. stephenking@lorem.com ">
                 </div>
@@ -90,7 +90,7 @@
                 <div class="form-1">
                     <div class="form-1-text">
                         <p>Phone Number</p>
-                        <h5>This field is required</h5>
+                        <h5 class="numberError">This field is required</h5>
                     </div>
                     <input type="text" id="input-number" class="input-number" placeholder="e.g. +1 234 567 890">
                 </div>
