--- a/index.html
+++ b/index.html
@@ -100,8 +100,9 @@
                         <input type="text" id="input-number" class="input-number" placeholder="e.g. +1 234 567 890">
                     </div>
 
-                    <div class="next-btn">
-                        <button type="submit" href="#">Next Step</button>
+                    <div class="btns">
+                        <button class="goBack-btn goBack-btn-one">Go Back</button>
+                        <button type="submit" class="next-btn next-btn-one" href="#">Next Step</button>
                     </div>
                 </form>
 
@@ -167,8 +168,9 @@
                     <h4>Yearly</h4>
                 </div>
 
-                <div class="next-btn">
-                    <button type="submit" href="#">Next Step</button>
+                <div class="btns">
+                    <button class="goBack-btn goBack-btn-one">Go Back</button>
+                    <button type="submit" class="next-btn next-btn-two" href="#">Next Step</button>
                 </div>
             </div>
 
@@ -222,8 +224,9 @@
                     </div>
 
                 </div>
-                <div class="next-btn">
-                    <button type="submit" href="#">Next Step</button>
+                <div class="btns">
+                    <button class="goBack-btn goBack-btn-one">Go Back</button>
+                    <button type="submit" class="next-btn next-btn-three" href="#">Next Step</button>
                 </div>
 
             </div>
@@ -264,8 +267,9 @@
                     <h3>$12/mo</h3>
                 </div>
 
-                <div class="next-btn">
-                    <button type="submit" href="#">Next Step</button>
+                <div class="btns">
+                    <button class="goBack-btn goBack-btn-one">Go Back</button>
+                    <button type="submit" class="next-btn next-btn-four" href="#">Next Step</button>
                 </div>
             </div>
 
