goback ve next butonların kodları tamamlandı

--- a/index.html
+++ b/index.html
@@ -100,8 +100,8 @@
                         <input type="text" id="input-number" class="input-number" placeholder="e.g. +1 234 567 890">
                     </div>
 
-                    <div class="btns">
-                        <button class="goBack-btn goBack-btn-one">Go Back</button>
+                    <div class="btns btns-one">
+                        <!-- <button class="goBack-btn goBack-btn-one">Go Back</button> -->
                         <button type="submit" class="next-btn next-btn-one" href="#">Next Step</button>
                     </div>
                 </form>
@@ -225,7 +225,7 @@
 
                 </div>
                 <div class="btns">
-                    <button class="goBack-btn goBack-btn-one">Go Back</button>
+                    <button class="goBack-btn goBack-btn-two">Go Back</button>
                     <button type="submit" class="next-btn next-btn-three" href="#">Next Step</button>
                 </div>
 
@@ -268,7 +268,7 @@
                 </div>
 
                 <div class="btns">
-                    <button class="goBack-btn goBack-btn-one">Go Back</button>
+                    <button class="goBack-btn goBack-btn-three">Go Back</button>
                     <button type="submit" class="next-btn next-btn-four" href="#">Next Step</button>
                 </div>
             </div>
