proje bitti sayılır

--- a/index.html
+++ b/index.html
@@ -269,8 +269,21 @@
 
                 <div class="btns">
                     <button class="goBack-btn goBack-btn-three">Go Back</button>
-                    <button type="submit" class="next-btn next-btn-four" href="#">Next Step</button>
+                    <button type="submit" class="next-btn confirm-btn" href="#">Confirm</button>
                 </div>
+            </div>
+
+
+
+            <div class="right-side-confirm">
+                <img src="assets/img/icon-thank-you.svg" alt="" />
+                <h4>Thank you!</h4>
+                <h6>
+                    Thanks for confirming your subscription! We hope you have fun
+                    using our platform. If you ever need support, please feel free to
+                    email us at support@loremgaming.com.
+                </h6>
+
             </div>
 
 
@@ -283,6 +296,10 @@
     </div>
 
     </div>
+
+
+
+
 
     <script src="assets/js/script.js"></script>
 </body>
